<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vbox_imu03_driver</name>
  <version>0.0.0</version>
  <description>VBOX IMU03 drivers for Autoware using ROS2 Humble</description>
  <maintainer email="74571419+a-gkougkoulidis@users.noreply.github.com">anton</maintainer>
  <license>BSD-2-Clause license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>more_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
